[project]
name = "incident-response-env"
version = "0.1.0"
description = "SRE incident response triage environment for training AI agents"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.25.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "openai>=1.0.0"]

[project.scripts]
server = "incident_response_env.server.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["incident_response_env", "incident_response_env.server"]
package-dir = { "incident_response_env" = ".", "incident_response_env.server" = "server" }
